<resources>
    <string name="app_name">AstroGro</string>

    <string name="action_settings">Settings</string>
    <string name="get_help">Help</string>
    <string name="search_title">search</string>
    <string name="search_hint">Find Reciepe</string>
    <string name="Pod">Pod</string>
    <string name="menus">menu</string>
    <string name="scheduleButton">Schedule</string>
    <string name="pod_status">Pod Status</string>
    <string name="notification">Notification</string>
    <string name="Advice">Advice</string>
</resources>
