<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/device_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:id="@+id/top_bar"
        android:layout_alignParentStart="true"
        android:background="@drawable/bar"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/Pod" />


    <com.astrogro.astrogro.FontButtonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menus"
        android:textSize="22sp"
        android:id="@+id/menuButton"
        android:backgroundTint="@color/transparent"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/defaultFontColor"
        app:font="Calibre-Semibold.ttf"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@id/menuButton"
        android:id="@+id/temp_space"/>

    <com.astrogro.astrogro.FontButtonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pod"
        android:textSize="22sp"
        android:id="@+id/podButton"
        android:backgroundTint="@color/transparent"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_above= "@id/temp_space"
        android:textColor="@color/defaultFontColor"
        app:font="Calibre-Semibold.ttf"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/menuButton"
        android:id="@+id/temp_space1"/>

    <com.astrogro.astrogro.FontButtonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scheduleButton"
        android:textSize="22sp"
        android:id="@+id/scheduleButton"
        android:backgroundTint="@color/transparent"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_below= "@id/temp_space1"
        android:textColor="@color/defaultFontColor"
        app:font="Calibre-Semibold.ttf"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:id="@+id/bot_bar"
        android:layout_alignParentStart="true"
        android:background="@drawable/bar"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/Pod" />
</RelativeLayout>
