<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/seed_bg">

    <Space
        android:id="@+id/topSpace"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        />
    <TextView
        android:id="@+id/leftline"
        android:layout_width="10dp"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/topSpace"
        android:background="@color/defaultFontColor"/>
    <Space
        android:id="@+id/leftSpace"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="false"
        android:layout_below="@id/topSpace"
        android:layout_alignParentEnd="false"/>
    <com.astrogro.astrogro.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pod_status"
        android:textSize="28sp"
        android:textColor="@color/defaultFontColor"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAlignment="center"
        android:layout_toRightOf="@id/leftSpace"
        android:layout_below="@id/topSpace"
        android:layout_marginTop="30dp"
        app:font="Calibre-Semibold.ttf"/>
    <TextView
        android:id="@+id/rightLine"
        android:layout_width="10dp"
        android:layout_height="80dp"
        android:layout_marginLeft="120dp"
        android:layout_below="@id/topSpace"
        android:layout_toRightOf="@id/textView"
        android:background="@color/defaultFontColor"/>
    <Space
        android:id="@+id/bottomSpace"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/leftline"
        />
    <TextView
        android:id="@+id/midLine"
        android:layout_width="350dp"
        android:layout_height="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/leftline"
        android:background="@color/defaultFontColor"/>

    <com.astrogro.astrogro.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="28sp"
        android:textColor="@color/defaultFontColor"
        android:id="@+id/notification"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_below="@id/midLine"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:font="Calibre-Semibold.ttf"/>

    <TextView
        android:id="@+id/botLine"
        android:layout_width="350dp"
        android:layout_height="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/defaultFontColor"/>

    <com.astrogro.astrogro.FontButtonView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/transparent"
        android:text="@string/Advice"
        android:textColor="@color/defaultFontColor"
        app:font="Calibre-Regular.ttf"
        android:textSize="22dp"
        android:id="@+id/advice"
        />

</RelativeLayout>